fix: Prevent the text ".grid__col--12" from being aligned to the left

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -413,7 +413,7 @@ nav[role="navigation"] {
 
 // Buttons - Style specifc to this UI Kit
 
-#buttons ~ .grid__row {
+#buttons + .grid__row {
   .grid__col--12 {
     display: flex;
     justify-content: space-between;
